--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="copyrights">By SunYuHan</div>
 		<div id="fh5co-bio">
 			<div id="fh5co-bio-inner">
-				<p class="to-animate">这是孙宇涵的个人主页！我还没有想好要在这里写些什么！</p>
+				<p class="to-animate">这是孙宇涵的个人主页！仍然在装修中！</p>
 			</div>
 			
 		</div>
