--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
 		<div id="fh5co-bio">
 			<div id="fh5co-bio-inner">
 				<p class="to-animate">这是孙宇涵的个人主页！仍然在装修中！</p>
+				<p class="to-animate">您可以查看我的一些其他项目：</p>
+				<p class="to-animate"><a href="https://sunyuhan1998.github.io/GetAudioFromWeChatArticle/">微信文章音频下载工具</a></p>
+				<p class="to-animate"><a href="https://sunyuhan1998.github.io/NumberSixBlog/">第六博客</a></p>
+
 			</div>
 			
 		</div>
