--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<span class="to-animate">还未到山顶。</span> 
 					<span class="to-animate">2019-3-31</span>
 				</h1>
-				<p class="to-animate">如果您想联系我，可以发送邮件到我的邮箱1085481446@qq.com</p>
+				<p class="to-animate">如果您想联系我，可以发送邮件到我的邮箱sunyuhan199805@163.com或sunyuhan1998@gmail.com</p>
 			</div>
 			<div id="social-animate" class="fh5co-social">
 				<ul>
@@ -66,9 +66,12 @@
 		<div id="fh5co-bio">
 			<div id="fh5co-bio-inner">
 				<p class="to-animate">这是孙宇涵的个人主页！仍然在装修中！</p>
+				<p class="to-animate"><a href="https://blog.csdn.net/qq_20008183">我的CSDN博客</a></p>
 				<p class="to-animate">您可以查看我的一些其他项目：</p>
 				<p class="to-animate"><a href="https://sunyuhan1998.github.io/GetAudioFromWeChatArticle/">微信文章音频下载工具</a></p>
 				<p class="to-animate"><a href="https://sunyuhan1998.github.io/NumberSixBlog/">第六博客</a></p>
+				<p class="to-animate"><a href="https://sunyuhan1998.github.io/WebShop/">Web商城</a></p>
+				<p class="to-animate"><a href="https://sunyuhan1998.github.io/Face-Server/">人脸识别-服务端</a></p>
 
 			</div>
 			
