--- a/index.html
+++ b/index.html
@@ -8,17 +8,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>孙宇涵的个人主页</title>
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
-
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 
@@ -51,30 +40,23 @@
 					<span class="to-animate">还未到山顶。</span> 
 					<span class="to-animate">2019-3-31</span>
 				</h1>
-				<p class="to-animate">如果您想联系我，可以发送邮件到我的邮箱sunyuhan199805@163.com或sunyuhan1998@gmail.com</p>
-			</div>
-			<div id="social-animate" class="fh5co-social">
-				<ul>
-					<li><a href="#" class="to-animate"><i class="icon-twitter-with-circle"></i></a></li>
-					<li><a href="#" class="to-animate"><i class="icon-facebook-with-circle"></i></a></li>
-					<li><a href="#" class="to-animate"><i class="icon-instagram-with-circle"></i></a></li>
-				</ul>
+				<p class="to-animate">如果您想联系我，可以发送邮件到我的邮箱sunyuhan199805@163.com 或 sunyuhan1998@gmail.com</p>
 			</div>
 			<div class="overlay"></div>
 		</div>
         <div class="copyrights">By SunYuHan</div>
 		<div id="fh5co-bio">
 			<div id="fh5co-bio-inner">
-				<p class="to-animate">这是孙宇涵的个人主页！仍然在装修中！</p>
+				<p class="to-animate">这是孙宇涵的个人主页，仍然在装修中！</p>
 				<p class="to-animate"><a href="https://blog.csdn.net/qq_20008183">我的CSDN博客</a></p>
 				<p class="to-animate">您可以查看我的一些其他项目：</p>
 				<p class="to-animate"><a href="https://sunyuhan1998.github.io/GetAudioFromWeChatArticle/">微信文章音频下载工具</a></p>
 				<p class="to-animate"><a href="https://sunyuhan1998.github.io/NumberSixBlog/">第六博客</a></p>
-				<p class="to-animate"><a href="https://sunyuhan1998.github.io/WebShop/">Web商城</a></p>
-				<p class="to-animate"><a href="https://sunyuhan1998.github.io/Face-Server/">人脸识别-服务端</a></p>
-
+				<p class="to-animate"><a href="https://sunyuhan1998.github.io/WebShop/">拼夕夕购物商城</a></p>
+				<p class="to-animate"><a href="https://sunyuhan1998.github.io/MyGame/">MyGame游戏商城</a></p>
+				<p class="to-animate"><a href="https://sunyuhan1998.github.io/Face-Server/">人脸识别登录-服务端</a></p>
+				<p class="to-animate"><a href="https://sunyuhan1998.github.io/Face-Client/">人脸识别登录-客户端</a></p>
 			</div>
-			
 		</div>
 		
 		
