--- a/index.html
+++ b/index.html
@@ -1,33 +1,23 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+
+	<html class="no-js">
 	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>孙宇涵的个人主页</title>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>孙宇涵的个人主页</title>
+		<link rel="shortcut icon" href="favicon.ico">
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
-
-	<!-- Google Webfonts -->
-	
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Bootstrap Style -->
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<!-- Theme Style -->
-	<link rel="stylesheet" href="css/style.css">
-	<!-- Modernizr JS -->
-	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
-
+		<!-- Animate.css -->
+		<link rel="stylesheet" href="css/animate.css">
+		<!-- Icomoon Icon Fonts-->
+		<link rel="stylesheet" href="css/icomoon.css">
+		<!-- Bootstrap Style -->
+		<link rel="stylesheet" href="css/bootstrap.css">
+		<!-- Theme Style -->
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/MyCss.css">
+		<!-- Modernizr JS -->
+		<script src="js/modernizr-2.6.2.min.js"></script>
 	</head>
 	<body>
 		
@@ -46,8 +36,50 @@
 		</div>
         <div class="copyrights">By SunYuHan</div>
 		<div id="fh5co-bio">
+			<div id = "login">
+				<a href="#">登陆</a>&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="#">注册</a>
+			</div>
+			<div id="msgBord">
+				<div id = "msgContent">
+					<div id = "msg1" class="msg">
+						<div class="content">
+							<h5>&nbsp;&nbsp;&nbsp;&nbsp;今天天气真好啊今天天气真好啊今天天气真好啊今天天气真好啊今天天气真好啊今天天气真好啊今天天气真好啊今天天气真好啊今天天气真好啊今天天气真好啊今天天气真好啊今天天气真好啊今天天气真好啊今天天气真好啊今天天气真好啊今天天气真好啊今天天气真好啊今天天气真好啊今天天气真好啊今天天气</h5>
+						</div>
+						<div class="comment">
+							<svg t="1585819086830" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2070" width="200" height="200"><path d="M896 128H128a32 32 0 0 0-32 32v576a32 32 0 0 0 32 32h288v-64H160V192h704v512h-256c-8.832 0-16.832 3.584-22.656 9.376l-159.968 160 45.248 45.248L621.248 768H896a32 32 0 0 0 32-32V160a32 32 0 0 0-32-32" fill="#8a8a8a" p-id="2071"></path><path d="M560 448a48 48 0 1 0-95.968-0.032A48 48 0 0 0 560 448M240 448a48 48 0 1 0 95.968 0.032A48 48 0 0 0 240 448M784 448a48 48 0 1 0-95.968-0.032A48 48 0 0 0 784 448" fill="#8a8a8a" p-id="2072"></path></svg>
+						</div>
+					</div>
+					<div id = "msg1" class="msg">
+						<div class="comment">
+							<svg t="1585819086830" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2070" width="200" height="200"><path d="M896 128H128a32 32 0 0 0-32 32v576a32 32 0 0 0 32 32h288v-64H160V192h704v512h-256c-8.832 0-16.832 3.584-22.656 9.376l-159.968 160 45.248 45.248L621.248 768H896a32 32 0 0 0 32-32V160a32 32 0 0 0-32-32" fill="#8a8a8a" p-id="2071"></path><path d="M560 448a48 48 0 1 0-95.968-0.032A48 48 0 0 0 560 448M240 448a48 48 0 1 0 95.968 0.032A48 48 0 0 0 240 448M784 448a48 48 0 1 0-95.968-0.032A48 48 0 0 0 784 448" fill="#8a8a8a" p-id="2072"></path></svg>
+						</div>
+					</div>
+					<div id = "msg1" class="msg">
+						<div class="comment">
+							<svg t="1585819086830" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2070" width="200" height="200"><path d="M896 128H128a32 32 0 0 0-32 32v576a32 32 0 0 0 32 32h288v-64H160V192h704v512h-256c-8.832 0-16.832 3.584-22.656 9.376l-159.968 160 45.248 45.248L621.248 768H896a32 32 0 0 0 32-32V160a32 32 0 0 0-32-32" fill="#8a8a8a" p-id="2071"></path><path d="M560 448a48 48 0 1 0-95.968-0.032A48 48 0 0 0 560 448M240 448a48 48 0 1 0 95.968 0.032A48 48 0 0 0 240 448M784 448a48 48 0 1 0-95.968-0.032A48 48 0 0 0 784 448" fill="#8a8a8a" p-id="2072"></path></svg>
+						</div>
+					</div>
+					<div id = "msg1" class="msg">
+						<div class="comment">
+							<svg t="1585819086830" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2070" width="200" height="200"><path d="M896 128H128a32 32 0 0 0-32 32v576a32 32 0 0 0 32 32h288v-64H160V192h704v512h-256c-8.832 0-16.832 3.584-22.656 9.376l-159.968 160 45.248 45.248L621.248 768H896a32 32 0 0 0 32-32V160a32 32 0 0 0-32-32" fill="#8a8a8a" p-id="2071"></path><path d="M560 448a48 48 0 1 0-95.968-0.032A48 48 0 0 0 560 448M240 448a48 48 0 1 0 95.968 0.032A48 48 0 0 0 240 448M784 448a48 48 0 1 0-95.968-0.032A48 48 0 0 0 784 448" fill="#8a8a8a" p-id="2072"></path></svg>
+						</div>
+					</div>
+					<div id = "msg1" class="msg">
+						<div class="comment">
+							<svg t="1585819086830" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2070" width="200" height="200"><path d="M896 128H128a32 32 0 0 0-32 32v576a32 32 0 0 0 32 32h288v-64H160V192h704v512h-256c-8.832 0-16.832 3.584-22.656 9.376l-159.968 160 45.248 45.248L621.248 768H896a32 32 0 0 0 32-32V160a32 32 0 0 0-32-32" fill="#8a8a8a" p-id="2071"></path><path d="M560 448a48 48 0 1 0-95.968-0.032A48 48 0 0 0 560 448M240 448a48 48 0 1 0 95.968 0.032A48 48 0 0 0 240 448M784 448a48 48 0 1 0-95.968-0.032A48 48 0 0 0 784 448" fill="#8a8a8a" p-id="2072"></path></svg>
+						</div>
+					</div>
+					<div id = "msg1" class="msg">
+						<div class="comment">
+							<svg t="1585819086830" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2070" width="200" height="200"><path d="M896 128H128a32 32 0 0 0-32 32v576a32 32 0 0 0 32 32h288v-64H160V192h704v512h-256c-8.832 0-16.832 3.584-22.656 9.376l-159.968 160 45.248 45.248L621.248 768H896a32 32 0 0 0 32-32V160a32 32 0 0 0-32-32" fill="#8a8a8a" p-id="2071"></path><path d="M560 448a48 48 0 1 0-95.968-0.032A48 48 0 0 0 560 448M240 448a48 48 0 1 0 95.968 0.032A48 48 0 0 0 240 448M784 448a48 48 0 1 0-95.968-0.032A48 48 0 0 0 784 448" fill="#8a8a8a" p-id="2072"></path></svg>
+						</div>
+					</div>
+					
+				</div>
+			</div>
 			<div id="fh5co-bio-inner">
-				<p class="to-animate">这是孙宇涵的个人主页，仍然在装修中！</p>
+				<p class="to-animate">这是孙宇涵的个人主页！</p>
 				<p class="to-animate"><a href="https://blog.csdn.net/qq_20008183">我的CSDN博客</a></p>
 				<p class="to-animate">您可以查看我的一些其他项目：</p>
 				<p class="to-animate"><a href="https://sunyuhan1998.github.io/GetAudioFromWeChatArticle/">微信文章音频下载工具</a></p>
@@ -57,6 +89,7 @@
 				<p class="to-animate"><a href="https://sunyuhan1998.github.io/Face-Server/">人脸识别登录-服务端</a></p>
 				<p class="to-animate"><a href="https://sunyuhan1998.github.io/Face-Client/">人脸识别登录-客户端</a></p>
 			</div>
+
 		</div>
 		
 		
